--- a/private_dot_config/theia/ansible-inventory.ini.tmpl
+++ b/private_dot_config/theia/ansible-inventory.ini.tmpl
@@ -1,6 +1,13 @@
 {{ .chezmoi.hostname }} ansible_connection=local
 
 {{- if .feat.gui }}
+
 [gui]
+{{ .chezmoi.hostname }}
+{{- end }}
+
+{{- if .feat.dev }}
+
+[dev]
 {{ .chezmoi.hostname }}
 {{- end }}
