fix: don't warn about python interpreter

--- a/private_dot_config/theia/ansible-inventory.ini.tmpl
+++ b/private_dot_config/theia/ansible-inventory.ini.tmpl
@@ -1,4 +1,4 @@
-{{ .chezmoi.hostname }} ansible_connection=local
+{{ .chezmoi.hostname }} ansible_connection=local ansible_python_interpreter=auto_silent
 
 {{- if .feat.gui }}
 
