refactor(chezmoi): simpler way to keep settings

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,23 +1,11 @@
-{{/* This allows us to keep our existing settings when re-generating this config file */}}
-{{- $gui := "" -}}
-{{- if hasKey .feat "gui" -}}
-{{-   $gui = .feat.gui -}}
-{{- else -}}
-{{-   $gui = "false" -}}
-{{- end -}}
-{{- $dev := "" -}}
-{{- if hasKey .feat "dev" -}}
-{{-   $dev = .feat.dev -}}
-{{- else -}}
-{{-   $dev = "false" -}}
-{{- end -}}
+{{/* This config file template is written to keep our existing settings when re-generating it */}}
 [data.feat]
 
 # Will this machine have a graphical user interface?
-gui = {{ $gui }}
+gui = {{ or .feat.gui false }}
 
 # Will this machine be used for development?
-dev = {{ $dev }}
+dev = {{ or .feat.dev false }}
 
 [diff]
 exclude = ["scripts"]
