--- a/private_dot_config/pipewire/pipewire.conf.d/create_sink-virtual-surround-7.1.conf.tmpl
+++ b/private_dot_config/pipewire/pipewire.conf.d/create_sink-virtual-surround-7.1.conf.tmpl
@@ -93,6 +93,7 @@ context.modules = [
                 node.passive   = true
                 audio.channels = 2
                 audio.position = [ FL FR ]
+                media.role     = "Virtual"
             }
         }
     }
